# SurvivalSands

./: .env.example  .gitignore  README.md  package.json
backend/: animals.py  arrival.py  bottle.py  death.py  items.py  judge.py  landmarks.py  llm.py  prompts_shared.py  pyproject.toml  search.py  server.py  session.py  terrain.py  trees.py  world.py
backend/src/survivalsands/: animals.py  arrival.py  bottle.py  death.py  items.py  judge.py  landmarks.py  llm.py  prompts_shared.py  search.py  server.py  session.py  terrain.py  weather.py  world.py
frontend/: App.vue  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/components/: ActionLog.vue  DeathOverlay.vue  MapCanvas.vue  PackOverlay.vue  ScenePanel.vue
frontend/composables/: useCanvas.ts  useInput.ts
frontend/src/components/: ActionInput.vue  EnvStatus.vue  (+4 more)
frontend/stores/: game.ts
public/: game.js  index.html  item_map.js
public/assets/: index-BAXEQfLe.js  index-BYEUTYbi.css  index-C7f5yzix.js  index-CP16kqB5.css  index-CPZ2F4WH.js  index-CT7anFoM.js  index-CU7Kigjs.js  index-CbersVR2.js  index-Ce0kb7_0.js  index-Cem1tSz2.js  index-CoOUCU3w.css  index-CphPLLrF.js  index-D-L5lXpZ.js  index-D40gZVll.css  index-D8ZwTqoY.js  index-DRvdxRz3.js  index-DiEGU2K-.css  index-Dkta5fvs.js  index-GHyIF3yV.css  index-KjKPmJG5.js  index-UBjJvaQT.js  index-al9fcRZv.js  index-cwsuz2iw.js  index-m7axYlGv.js  index-nTL0sIyR.css  three-2Kn9u7aw.js  three-BVr5SQ0m.js  three-Bn2k6k-3.js  three-CHVSfqf-.js  three-CpxsNk56.js  three-qC9ojEQH.js
scripts/: generate_item_map.py
(+3 files in other folders)
